# Drivetrain

./: README.md
Source/: CMakeLists.txt  Drivetrain.cpp  Drivetrain.h
Source/Gear/: CMakeLists.txt  Gear.cpp  Gear.h  GearTypes.h
Source/Gear/Design/: CMakeLists.txt  Equations.h  Exception.h  GearBlank.cpp  GearBlank.h  Involute.cpp  Involute.h  TeethCutter.cpp  TeethCutter.h  ToothProfiler.cpp  ToothProfiler.h
